<resources>
    <string name="app_name">TestMVP</string>
    <string name="home_page_text">FindBugs is a static code analysis tool that analyses Java bytecode and detects a wide range of problems.\n\nPMD is a source code analyzer. It finds common programming flaws like unused variables, empty catch blocks, unnecessary object creation, and so forth.</string>
    <string name="home_page_text_update">PMD is a source code analyzer. It finds common programming flaws like unused variables, empty catch blocks, unnecessary object creation, and so forth.</string>
    <string name="home_page_btn_text">Update</string>
</resources>
